RESOLVED FIXED81401
[chromium] Animating opacity is not opaque and should create a render surface on main thread
https://bugs.webkit.org/show_bug.cgi?id=81401
Summary [chromium] Animating opacity is not opaque and should create a render surface...
Dana Jansens
Reported 2012-03-16 14:03:03 PDT
[chromium] Animating opacity is not opaque and should create a render surface on main thread
Attachments
Patch (3.96 KB, patch)
2012-03-16 14:05 PDT, Dana Jansens
no flags
Patch (4.00 KB, patch)
2012-03-18 16:44 PDT, Dana Jansens
no flags
Dana Jansens
Comment 1 2012-03-16 14:05:05 PDT
Dana Jansens
Comment 2 2012-03-18 16:40:30 PDT
This is probably not needed? a) If we don't have/don't have a render surface on main thread but opposite on impl, it shouldn't hurt anything. We don't commit the surface anyway. b) We don't depend on a surface on main thread for this anywhere.
Dana Jansens
Comment 3 2012-03-18 16:41:41 PDT
Oh this does affect paint culling. If we make it own a render surface, then we can do scoped paint culling within the surface.
Dana Jansens
Comment 4 2012-03-18 16:44:47 PDT
WebKit Review Bot
Comment 5 2012-03-18 17:58:48 PDT
Comment on attachment 132508 [details] Patch Clearing flags on attachment: 132508 Committed r111144: <http://trac.webkit.org/changeset/111144>
WebKit Review Bot
Comment 6 2012-03-18 17:58:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.