[chromium] Animating opacity is not opaque and should create a render surface on main thread https://bugs.webkit.org/show_bug.cgi?id=81401

Patch by Dana Jansens <danakj@chromium.org> on 2012-03-18
Reviewed by James Robinson.

Source/WebCore:

Unit test: CCLayerTreeHostCommonTest.verifyAnimationsForRenderSurfaceHierarchy

* platform/graphics/chromium/cc/CCLayerTreeHostCommon.cpp:
(WebCore::layerOpacityIsOpaque):
(WebCore):
(WebCore::subtreeShouldRenderToSeparateSurface):

Source/WebKit/chromium:

* tests/CCLayerTreeHostCommonTest.cpp:
(WebCore::TEST):

Canonical link: https://commits.webkit.org/98688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111144 268f45cc-cd09-0410-ab3c-d52691b4dbfc